--- a/src/components/card/styles.scss
+++ b/src/components/card/styles.scss
@@ -1,7 +1,8 @@
 .cardSection {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    margin: 10px;
+    margin:  30px;
     width: 300px;
+    height: 300px;
     text-align: center;
     padding: 20px 20px;
   }
